@@ -119,6 +119,7 @@ Collate:
     'geom-rug.r'
     'geom-segment.r'
     'geom-smooth.r'
+    'geom-spoke.r'
     'geom-step.r'
     'geom-text.r'
     'geom-tile.r'
@@ -188,7 +189,6 @@ Collate:
     'stat-quantile.r'
     'stat-smooth-methods.r'
     'stat-smooth.r'
-    'stat-spoke.r'
     'stat-sum.r'
     'stat-summary-2d.r'
     'stat-summary-bin.R'
