@@ -188,6 +188,7 @@ export(GeomRibbon)
 export(GeomRug)
 export(GeomSegment)
 export(GeomSmooth)
+export(GeomSpoke)
 export(GeomStep)
 export(GeomText)
 export(GeomTile)
@@ -218,7 +219,6 @@ export(StatIdentity)
 export(StatQq)
 export(StatQuantile)
 export(StatSmooth)
-export(StatSpoke)
 export(StatSum)
 export(StatSummary)
 export(StatSummary2d)
@@ -319,6 +319,7 @@ export(geom_ribbon)
 export(geom_rug)
 export(geom_segment)
 export(geom_smooth)
+export(geom_spoke)
 export(geom_step)
 export(geom_text)
 export(geom_tile)
