@@ -202,7 +202,7 @@ Layer <- ggproto("Layer", NULL,
 
   compute_geom_1 = function(self, data) {
     if (empty(data)) return(data.frame())
-    data <- self$geom$setup_data(data, self$geom_params)
+    data <- self$geom$setup_data(data, c(self$geom_params, self$aes_params))
 
     check_required_aesthetics(
       self$geom$required_aes,
