@@ -1,66 +1,0 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/stat-spoke.r
-\name{stat_spoke}
-\alias{stat_spoke}
-\title{Convert angle and radius to xend and yend.}
-\usage{
-stat_spoke(mapping = NULL, data = NULL, geom = "segment",
-  position = "identity", show.legend = NA, inherit.aes = TRUE, ...)
-}
-\arguments{
-\item{mapping}{The aesthetic mapping, usually constructed with
-\code{\link{aes}} or \code{\link{aes_string}}. Only needs to be set
-at the layer level if you are overriding the plot defaults.}
-
-\item{data}{A layer specific dataset - only needed if you want to override
-the plot defaults.}
-
-\item{geom}{The geometric object to use display the data}
-
-\item{position}{The position adjustment to use for overlapping points
-on this layer}
-
-\item{show.legend}{logical. Should this layer be included in the legends?
-\code{NA}, the default, includes if any aesthetics are mapped.
-\code{FALSE} never includes, and \code{TRUE} always includes.}
-
-\item{inherit.aes}{If \code{FALSE}, overrides the default aesthetics,
-rather than combining with them. This is most useful for helper functions
-that define both data and aesthetics and shouldn't inherit behaviour from
-the default plot specification, e.g. \code{\link{borders}}.}
-
-\item{...}{other arguments passed on to \code{\link{layer}}. This can
-include aesthetics whose values you want to set, not map. See
-\code{\link{layer}} for more details.}
-}
-\description{
-Convert angle and radius to xend and yend.
-}
-\section{Aesthetics}{
-
-\Sexpr[results=rd,stage=build]{ggplot2:::rd_aesthetics("stat", "spoke")}
-}
-
-\section{Computed variables}{
-
-\describe{
-  \item{xend}{x position of end of line segment}
-  \item{yend}{x position of end of line segment}
-}
-}
-\examples{
-df <- expand.grid(x = 1:10, y=1:10)
-df$angle <- runif(100, 0, 2*pi)
-df$speed <- runif(100, 0, 0.5)
-
-ggplot(df, aes(x, y)) +
-  geom_point() +
-  stat_spoke(aes(angle = angle), radius = 0.5)
-
-last_plot() + scale_y_reverse()
-
-ggplot(df, aes(x, y)) +
-  geom_point() +
-  stat_spoke(aes(angle = angle, radius = speed))
-}
-
